# gatekeeper-ai-governance-command-center

./: .env.example  .gitignore  AGENTS.md  HANDOFF_TO_SNOWFLAKE_DEVELOPER.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml
.streamlit/: config.toml
data/: README.md
data/scenarios/: demo_fail_scenario.csv  demo_pass_scenario.csv
docs/: framework_notes.md
snowflake/: data_contract.md  example_queries.sql  proposed_schema.sql  proposed_views.sql  streamlit_migration_notes.md
src/gatekeeper/: __init__.py  contracts.py  data_providers.py  metrics.py  models.py  reports.py
tests/: test_metrics.py
